--- a/_config.yml
+++ b/_config.yml
@@ -58,7 +58,7 @@ content:
         sub_title: 클라이언트 프로그래머
         caption: 2022.12 ~ 2025.12
         description: | # this will include new lines to allow paragraphs
-            던파 20주년 페스티벌 판타 드로우잇
+            <font size="5">던파 20주년 페스티벌 판타 드로우잇｜2025.10 ~ 2025.11</font>
             
             유저가 스케치 및 색칠한 그림을 2D 캐릭터로 생성하여 씬에 배치하고, 씬에 배치된 캐릭터 또는 기믹 오브젝트들을 손으로 터치하여 인터랙션 할 수 있는 실감형 콘텐츠를 개발했습니다.
             - 자체 개발한 엣지블렌딩 시스템을 적용하여 32:9 해상도 지원
