--- a/_config.yml
+++ b/_config.yml
@@ -60,7 +60,7 @@ content:
         description: | # this will include new lines to allow paragraphs
             <font size="4"><b>던파 20주년 페스티벌 판타 드로우잇｜2025.10 ~ 2025.11</b></font>
             
-            유저가 스케치 및 색칠한 그림을 2D 캐릭터로 생성하고 손으로 터치하여 인터랙션 할 수 있는 실감형 콘텐츠
+            *유저가 스케치 및 색칠한 그림을 2D 캐릭터로 생성하고 손으로 터치하여 인터랙션 할 수 있는 실감형 콘텐츠*
             - 자체 개발한 엣지블렌딩 시스템을 적용하여 32:9 해상도 지원
             - 키오스크 PC에서 생성된 캐릭터 데이터 송·수신을 위한 TCP/IP 소켓 통신 구현
             - FSM 기반 캐릭터 상태 관리 및 행동 로직 구현
