--- a/_config.yml
+++ b/_config.yml
@@ -65,6 +65,12 @@ content:
             - 키오스크 PC에서 생성된 캐릭터 데이터 송·수신을 위한 TCP/IP 소켓 통신 구현
             - FSM 기반 캐릭터 상태 관리 및 행동 로직 구현
             - 캐릭터 및 기믹 오브젝트의 터치·충돌 이벤트 구현
+
+            <font size="4"><b>현대백화점 흰디 포토카드｜2024.09 ~ 2024.12</b></font>
+
+            *AI 프롬프트를 조합하여 현대 백화점의 캐릭터 '흰디'를 생성형 AI로 생성하고 프린터를 이용해 포토카드로 출력하는 프로그램*
+            - SMART81 카드 프린터 SDK를 활용한 프린터 제어 기능 구현
+            - AI 프롬프트를 ScriptableObject로 관리하여 데이터를 UI 로직과 분리
       - layout: left
         title: 셀빅
         # link: https://cellbig.com
