--- a/_config.yml
+++ b/_config.yml
@@ -59,7 +59,7 @@ content:
             <br>
             <font size="4"><b>던파 20주년 페스티벌 판타 드로우잇｜2025.10 ~ 2025.11</b></font>
             *유저가 스케치 및 색칠한 그림을 2D 캐릭터로 생성하고 손으로 터치하여 인터랙션 할 수 있는 실감형 콘텐츠 개발*
-            - 자체 개발한 엣지블렌딩 시스템을 적용하여 32:9 해상도 지원
+            - 32:9 해상도 지원을 위해 자체 개발한 엣지블렌딩 시스템 적용
             - 키오스크 PC에서 생성된 캐릭터 데이터 송·수신을 위한 TCP/IP 소켓 통신 구현
             - FSM 기반 캐릭터 상태 관리 및 행동 로직 구현
             - 캐릭터 및 기믹 오브젝트의 터치·충돌 이벤트 구현
@@ -107,8 +107,6 @@ content:
             <br>
             <font size="4"><b>2D 스케치 캐릭터 생성 라이브러리｜2020.06 ~ 2020.08</b></font>
             *이미지 내 스케치된 그림을 검출하여 애니메이션이 가능한 2D 캐릭터로 변환하는 라이브러리 개발*
-            <br>
-            *(LG 아이들 나라 4.0 '내가 만든 그림책' 및 던파 20주년 페스티벌 판타 드로우잇 콘텐츠에 사용)*
             - OpenCV를 활용하여 스케치 그림 검출 알고리즘 구현
             - 기존 유니티 C# 스크립트로 작성된 캐릭터 생성 기능들을 성능 개선을 위해 C++로 포팅
             - Windows / Android / iOS 플랫폼별 라이브러리 빌드 환경 구축
