--- a/_config.yml
+++ b/_config.yml
@@ -61,7 +61,7 @@ content:
             *유저가 스케치 및 색칠한 그림을 2D 캐릭터로 생성하고 손으로 터치하여 인터랙션 할 수 있는 실감형 콘텐츠 개발*
             - FSM 기반 캐릭터 상태 관리 및 행동 로직 구현
             - 캐릭터 및 기믹 오브젝트의 터치·충돌 이벤트 구현
-            - 키오스크 PC에서 생성된 캐릭터 데이터 송·수신을 위한 TCP/IP 소켓 통신 구현
+            - 키오스크에서 생성된 캐릭터 데이터 송·수신을 위한 TCP/IP 소켓 통신 구현
             - 32:9 해상도 지원을 위해 자체 개발한 엣지블렌딩 시스템 적용
             <br>
             <br>
@@ -98,9 +98,9 @@ content:
             <br>
             <font size="4"><b>유엔젤 키즐｜2022.12 ~ 2025.07</b></font>
             *프로젝션 환경에서 손을 이용한 터치, 공 던지기와 같은 인터랙션을 통해 유아들에게 놀이 환경을 제공하는 실감형 콘텐츠 5종 개발*
+            - 콘텐츠 시작부터 클리어까지의 전반적인 게임 로직 및 연출 구현
             - 프레임워크의 유지보수성을 높이기 위해 의존성 분리 등 구조 개선
             - 팀 내 공유를 위한 프레임워크 사용 매뉴얼 작성
-            - 콘텐츠 5종의 전반적인 로직·인터랙션·연출 구현
       - layout: top-middle
         title: 셀빅
         sub_title: R&D 프로그래머
