--- a/_config.yml
+++ b/_config.yml
@@ -65,7 +65,21 @@ content:
             - 32:9 해상도 지원을 위해 자체 개발한 엣지블렌딩 시스템 적용
             <br>
             <br>
-            <font size="4"><b>발*
+            <font size="4"><b>현대백화점 흰디 포토카드｜2024.09 ~ 2024.12</b></font>
+            *AI 프롬프트를 조합하여 현대 백화점의 캐릭터 '흰디'를 생성형 AI로 생성하고 프린터를 이용해 포토카드로 출력하는 프로그램 개발*
+            - 카드 프린터 SDK를 활용한 프린터 제어 기능 구현
+            - 프롬프트 선택·캐릭터 생성·출력 등 전반적인 UI 기능 구현
+            <br>
+            <br>
+            <font size="4"><b>꿈이담키즈헬스케어센터 관리자 툴｜2024.06 ~ 2024.08</b></font>
+            *꿈이담키즈헬스케어센터에 납품된 콘텐츠들의 상태를 실시간으로 모니터링하고 사용자들의 정보를 관리할 수 있는 프로그램 개발*
+            - 콘텐츠 상태 모니터링을 위한 웹소켓(Socket.IO) 기반 실시간 통신 구현
+            - 사용자 데이터 관리를 위한 HTTP 기반 CRUD 구현
+            - 모니터링 대시보드, 사용자 데이터 관리 등 전반적인 UI 기능 구현
+            <br>
+            <br>
+            <font size="4"><b>포토하니｜2023.06 ~ 2023.12</b></font>
+            *사진 촬영부터 보정·출력까지 가능한 포토부스 프로그램 개발*
             - Canon SDK를 활용한 DSLR 카메라 제어 기능 구현
             - 촬영 리모컨 연동을 통한 원격 카메라 촬영 기능 구현
             - Windows 프린터 연동을 통한 사진 출력 기능 구현
