--- a/_config.yml
+++ b/_config.yml
@@ -103,6 +103,7 @@ content:
             <br>
             <font size="4"><b>유엔젤 키즐｜2022.12 ~ 2025.07</b></font>
             *프로젝션 환경에서 손을 이용한 터치, 공 던지기와 같은 인터랙션을 통해 유아들에게 놀이 환경을 제공하는 실감형 콘텐츠 5종 개발*
+            - 전반적인 콘텐츠 플레이 로직 및 연출 구현
             - 프레임워크의 유지보수성을 높이기 위해 의존성 분리 등 구조 개선
             - 팀 내 공유를 위한 프레임워크 사용 매뉴얼 작성
       - layout: top-middle
