--- a/_config.yml
+++ b/_config.yml
@@ -48,7 +48,7 @@ about_content: | # this will include new lines to allow paragraphs
   자기소개
 
 content:
-  - title: Skill
+  - title: Skills
     layout: text
     content: |
       - <b>Language</b> : C#, C++
@@ -134,6 +134,13 @@ content:
 
   - title: Other Experience
     layout: list
+
+  - title: Education
+    layout: text
+    content: |
+        2020.03 ~ 2022.02 광운대학교스마트융합대학원 스마트시스템학과(실감콘텐츠 전공)
+        
+        2016.03 ~ 2020.02 청강문화산업대학교 게임콘텐츠스쿨(프로그래밍 전공)
 
 # Footer
 footer_show_references: false
