--- a/_config.yml
+++ b/_config.yml
@@ -64,48 +64,21 @@ content:
         sub_title: 프로그램팀, 대리
         caption: 2022.12 ~ 2025.12
         description: | # this will include new lines to allow paragraphs
-            <br>
-            <font size="4"><b>던파 20주년 페스티벌 판타 드로우잇｜2025.10 ~ 2025.11</b></font>
-            *유저가 스케치 및 색칠한 그림을 2D 캐릭터로 생성하고 손으로 터치하여 인터랙션 할 수 있는 실감형 콘텐츠 개발*
-            - FSM 기반 캐릭터 상태 관리 및 행동 로직 구현
-            - 캐릭터 및 기믹 오브젝트의 터치·충돌 이벤트 구현
-            - 키오스크에서 생성된 캐릭터 데이터 송·수신을 위한 TCP/IP 소켓 통신 구현
-            - 32:9 해상도 지원을 위해 자체 개발한 엣지블렌딩 시스템 적용
-            <br>
-            <br>
-            <font size="4"><b>현대백화점 흰디 포토카드｜2024.09 ~ 2024.12</b></font>
-            *AI 프롬프트를 조합하여 현대 백화점의 캐릭터 '흰디'를 생성형 AI로 생성하고 프린터를 이용해 포토카드로 출력하는 프로그램 개발*
-            - Unity 환경에서 포토카드 출력을 위한 프린터 연동
-            - 프롬프트 선택·캐릭터 생성·출력 등 전반적인 UI 기능 구현
-            <br>
-            <br>
-            <font size="4"><b>꿈이담키즈헬스케어센터 관리자 툴｜2024.06 ~ 2024.08</b></font>
-            *꿈이담키즈헬스케어센터에 납품된 콘텐츠들의 상태를 실시간으로 모니터링하고 사용자들의 정보를 관리할 수 있는 프로그램 개발*
-            - 콘텐츠 상태 모니터링을 위한 웹소켓(Socket.IO) 기반 실시간 통신 구현
-            - 사용자 데이터 관리를 위한 HTTP 기반 CRUD 구현
-            - 모니터링 대시보드, 사용자 데이터 관리 등 전반적인 UI 기능 구현
-            <br>
-            <br>
-            <font size="4"><b>포토하니｜2023.06 ~ 2023.12</b></font>
-            *사진 촬영부터 보정·출력까지 가능한 포토부스 프로그램 개발*
-            - Unity 환경에서 포토부스 개발에 필요한 하드웨어 연동 (카메라, 촬영 리모컨, 프린터, 카드단말기)
-            - 얼굴 인식 기반 3D 소품 AR 합성 기능 구현
-            - 결제·촬영·출력 등 전반적인 UI 기능 구현
-            <br>
-            <br>
-            <font size="4"><b>소프트웨어 엣지블렌딩 시스템｜2023.01 ~ 2023.03</b></font>
-            *멀티 프로젝션 환경에서 여러 투사 영역을 하나의 화면처럼 자연스럽게 연결하는 소프트웨어 기반 엣지블렌딩 시스템 개발*
-            - OpenCV와 Shader를 활용하여 엣지블렌딩 핵심 기능 구현
-            - UGUI 확장을 통해 엣지블렌딩 환경에서의 UI 인터랙션 구현
-            - UI 디자인, 레이아웃, 기능 개발
-            - 현장 설치 지원을 위한 사용 매뉴얼 작성
-            <br>
-            <br>
-            <font size="4"><b>유엔젤 키즐｜2022.12 ~ 2025.07</b></font>
-            *프로젝션 환경에서 손을 이용한 터치, 공 던지기와 같은 인터랙션을 통해 유아들에게 놀이 환경을 제공하는 실감형 콘텐츠 5종 개발*
-            - 전반적인 콘텐츠 플레이 로직 및 연출 구현
-            - 프레임워크의 유지보수성을 높이기 위해 의존성 분리 등 구조 개선
-            - 팀 내 공유를 위한 프레임워크 사용 매뉴얼 작성
+            <font size="4"><b>Unity를 활용하여 시스템/콘텐츠 다수 개발</b></font>
+            - 인터랙티브 콘텐츠, 포토부스, 포토카드 등 다양한 콘텐츠를 전담하여 아키텍처 설계 및 구현
+            - 셰이더와 영상 처리를 활용한 엣지블렌딩 시스템 개발
+            - 로컬라이제이션 패키지를 확장하여 CSV 기반 로컬라이제이션 시스템 개발
+            - 콘텐츠 개발에 필요한 하드웨어 SDK를 Unity와 연동하여 기능 모듈화
+            
+            <font size="4"><b>프로젝트 유지보수성 개선</b></font>
+            - 콘텐츠 개발에 사용되는 프레임워크 리팩토링을 통한 코드 구조 개선
+            - UniTask를 활용해 코루틴 기반 비동기 로직을 async/await 기반으로 작성하여 코드 가독성 개선
+            - Addressables을 통해 리소스를 관리하여 메모리 사용 및 빌드 사이즈 최적화
+            
+            <font size="4"><b>팀 내 개발 프로세스 및 개발 문화 개선</b></font>
+            - 협업 시 통일성을 유지하기 위해 네이밍 컨벤션 정립
+            - 팀 내 전문성 및 협업 역량 강화를 위한 세미나 진행
+            
       - layout: top-middle
         title: 셀빅
         sub_title: R&D팀, 연구원
