--- a/_config.yml
+++ b/_config.yml
@@ -64,18 +64,20 @@ content:
         sub_title: 프로그램팀, 대리
         caption: 2022.12 ~ 2025.12
         description: | # this will include new lines to allow paragraphs
-            <font size="4"><b>Unity를 활용하여 시스템/콘텐츠 다수 개발</b></font>
+            <font size="5"><b>Unity를 활용하여 시스템 및 콘텐츠 다수 개발.</b></font>
             - 인터랙티브 콘텐츠, 포토부스, 포토카드 등 다양한 콘텐츠를 전담하여 아키텍처 설계 및 구현
             - 셰이더와 영상 처리를 활용한 엣지블렌딩 시스템 개발
             - 로컬라이제이션 패키지를 확장하여 CSV 기반 로컬라이제이션 시스템 개발
             - 콘텐츠 개발에 필요한 하드웨어 SDK를 Unity와 연동하여 기능 모듈화
+
             
-            <font size="4"><b>프로젝트 유지보수성 개선</b></font>
+            <font size="5"><b>프로젝트 유지보수성 개선.</b></font>
             - 콘텐츠 개발에 사용되는 프레임워크 리팩토링을 통한 코드 구조 개선
             - UniTask를 활용해 코루틴 기반 비동기 로직을 async/await 기반으로 작성하여 코드 가독성 개선
             - Addressables을 통해 리소스를 관리하여 메모리 사용 및 빌드 사이즈 최적화
+
             
-            <font size="4"><b>팀 내 개발 프로세스 및 개발 문화 개선</b></font>
+            <font size="5"><b>팀 내 개발 프로세스 및 개발 문화 개선.</b></font>
             - 협업 시 통일성을 유지하기 위해 네이밍 컨벤션 정립
             - 팀 내 전문성 및 협업 역량 강화를 위한 세미나 진행
             
