--- a/_config.yml
+++ b/_config.yml
@@ -66,13 +66,13 @@ content:
         description: | # this will include new lines to allow paragraphs
             <br>
             <font size="4.5"><b>Unity를 활용하여 시스템 및 콘텐츠 다수 개발.</b></font>
-            - 인터랙티브 콘텐츠, 포토부스, 포토카드 등 다양한 콘텐츠를 전담하여 아키텍처 설계 및 구현
-            - 셰이더와 영상 처리를 활용한 엣지블렌딩 시스템 개발
-            - 로컬라이제이션 패키지를 확장하여 CSV 기반 로컬라이제이션 시스템 개발
+            - 실감형 콘텐츠, 포토부스, 포토카드 등 다양한 콘텐츠를 전담하여 아키텍처 설계 및 구현
+            - OpenCV 및 셰이더를 활용하여 엣지블렌딩 시스템 개발
+            - Unity의 Localization 패키지를 확장하여 CSV 기반 로컬라이제이션 시스템 개발
             - 콘텐츠 개발에 필요한 하드웨어 SDK를 Unity와 연동하여 기능 모듈화
             <br>
             <br>
-            <font size="4.5"><b>프로젝트 유지보수성 개선.</b></font>
+            <font size="4.5"><b>프로젝트 유지보수 및 개선.</b></font>
             - 콘텐츠 개발에 사용되는 프레임워크 리팩토링을 통한 코드 구조 개선
             - UniTask를 활용해 코루틴 기반 비동기 로직을 async/await 기반으로 작성하여 코드 가독성 개선
             - Addressables을 통해 리소스를 관리하여 메모리 사용 및 빌드 사이즈 최적화
@@ -93,6 +93,15 @@ content:
         caption: 2019.10 ~ 2022.04
         description: | # this will include new lines to allow paragraphs
             <br>
+            <font size="4"><b>콘텐츠 개발에 필요한 핵심 기술 연구개발.</b></font>
+            - 
+            - 
+            <br>
+            <br>
+            <font size="4"><b>Unity 네이티브 플러그인 개발.</b></font>
+            - 카메라 연결, 실시간 영상 스트림 등 카메라 제어를 위해 SDK를 활용하여 C++ 플러그인 개발
+            - 기존 Unity C# 기능을 C++로 포팅하여 성능 최적화
+            
             <font size="4"><b>2D 스케치 캐릭터 생성 라이브러리｜2020.06 ~ 2020.08</b></font>
             *이미지 내 스케치된 그림을 검출하여 애니메이션이 가능한 2D 캐릭터로 변환하는 라이브러리 개발*
             - OpenCV를 활용하여 스케치 그림 검출 알고리즘 구현
@@ -104,7 +113,7 @@ content:
             *실감형 콘텐츠에 사용자 인터랙션을 적용하기 위해 영상 처리 기반 인터랙션 시스템 개발*
             - 카메라 연동부터 인터랙션 검출 결과를 전달하는 전반적인 파이프라인 설계 및 구현 
             - 영상 처리 기능 모듈화를 통해 다양한 인터랙션 알고리즘을 유연하게 구현할 수 있는 구조 설계 및 구현
-            - OpenCV를 활용하여 프로젝션 환경에서의 터치 및 움직임 검출 알고리즘 구현
+            - OpenCV를 활용하여 프로젝션 환경에서의 터치·움직임 검출 알고리즘 구현
             <br>
             <br>
             <font size="4"><b>카메라 제어 시스템｜2020.01 ~ 2020.02</b></font>
