--- a/_config.yml
+++ b/_config.yml
@@ -67,8 +67,8 @@ content:
             <br>
             <font size="4.5"><b>Unity를 활용하여 시스템 및 콘텐츠 다수 개발.</b></font>
             - 실감형 콘텐츠, 포토부스, 포토카드 등 다양한 콘텐츠를 전담하여 아키텍처 설계 및 구현
-            - OpenCV 및 셰이더를 활용하여 엣지블렌딩 시스템 개발
-            - Unity의 Localization 패키지를 확장하여 CSV 기반 로컬라이제이션 시스템 개발
+            - OpenCV 및 Shader를 활용하여 엣지블렌딩 시스템 개발
+            - Localization 패키지를 확장하여 CSV 기반 로컬라이제이션 시스템 개발
             - 콘텐츠 개발에 필요한 하드웨어 SDK를 Unity와 연동하여 기능 모듈화
             <br>
             <br>
@@ -81,11 +81,6 @@ content:
             <font size="4.5"><b>팀 내 개발 프로세스 및 개발 문화 개선.</b></font>
             - 협업 시 통일성을 유지하기 위해 네이밍 컨벤션 정립
             - 팀 내 전문성 및 협업 역량 강화를 위한 세미나 진행
-            <br>
-            <br>
-            <font size="4.5"><b>주요 프로젝트.</b></font>
-            - A
-            - B
             
       - layout: top-middle
         title: 셀빅
@@ -93,34 +88,16 @@ content:
         caption: 2019.10 ~ 2022.04
         description: | # this will include new lines to allow paragraphs
             <br>
-            <font size="4"><b>콘텐츠 개발에 필요한 핵심 기술 연구개발.</b></font>
-            - 
-            - 
+            <font size="4"><b>Unity 콘텐츠 개발에 필요한 핵심 기술 개발.</b></font>
+            - 카메라 연결 및 실시간 영상 스트림을 획득하기 위한 카메라 제어 시스템 개발 
+            - 프로젝션 환경에서의 실시간 인터랙션 시스템 개발
+            - OpenCV를 활용하여 이미지 내 스케치된 그림을 검출하는 알고리즘 개발
             <br>
             <br>
             <font size="4"><b>Unity 네이티브 플러그인 개발.</b></font>
-            - 카메라 연결, 실시간 영상 스트림 등 카메라 제어를 위해 SDK를 활용하여 C++ 플러그인 개발
-            - 기존 Unity C# 기능을 C++로 포팅하여 성능 최적화
-            
-            <font size="4"><b>2D 스케치 캐릭터 생성 라이브러리｜2020.06 ~ 2020.08</b></font>
-            *이미지 내 스케치된 그림을 검출하여 애니메이션이 가능한 2D 캐릭터로 변환하는 라이브러리 개발*
-            - OpenCV를 활용하여 스케치 그림 검출 알고리즘 구현
-            - 기존 Unity C# 스크립트로 작성된 캐릭터 생성 기능들을 성능 개선을 위해 C++로 포팅
-            - Windows / Android / iOS 플랫폼별 라이브러리 빌드 환경 구축
-            <br>
-            <br>
-            <font size="4"><b>영상 처리 기반 인터랙션 시스템｜2020.03 ~ 2020.05</b></font>
-            *실감형 콘텐츠에 사용자 인터랙션을 적용하기 위해 영상 처리 기반 인터랙션 시스템 개발*
-            - 카메라 연동부터 인터랙션 검출 결과를 전달하는 전반적인 파이프라인 설계 및 구현 
-            - 영상 처리 기능 모듈화를 통해 다양한 인터랙션 알고리즘을 유연하게 구현할 수 있는 구조 설계 및 구현
-            - OpenCV를 활용하여 프로젝션 환경에서의 터치·움직임 검출 알고리즘 구현
-            <br>
-            <br>
-            <font size="4"><b>카메라 제어 시스템｜2020.01 ~ 2020.02</b></font>
-            *실감형 콘텐츠 개발에 사용되는 다양한 타입의 카메라를 추가 구현 없이 연동하여 실시간 영상 스트림을 획득하는 시스템 개발*
-            - Unity 환경에서 카메라 제어를 위한 C++ 기반 네이티브 플러그인 개발
-            - 카메라 제어 로직을 추상화하여 신규 카메라를 유연하게 확장 가능한 구조 설계
-            - 카메라 연결 상태 모니터링 및 자동 재연결 기능 구현
+            - 카메라 제어를 위해 카메라 SDK를 활용한 C++ 플러그인 개발
+            - 이미지 내 그림을 스키닝된 2D 캐릭터로 생성하기 위한 C++ 플러그인 개발
+            - 기존 C#으로 구현된 기능을 C++로 포팅하여 성능 최적화
 
   - title: Other Experience
     layout: list
