--- a/_config.yml
+++ b/_config.yml
@@ -69,7 +69,7 @@ content:
       - 네이티브 플러그인 연동 경험
       <br>
       <br>
-      <font size="3.5"><b>　Tools : Git(SourceTree, Fork), Redmine, Notion</b></font>
+      <font size="3.5"><b>　Tools : Git - SourceTree/Fork, Redmine, Notion</b></font>
       <br>
       <font size="3.5"><b>　Etc</b></font>
       - OpenCV를 통한 영상 처리​
