--- a/_config.yml
+++ b/_config.yml
@@ -83,11 +83,11 @@ content:
         caption: 2022.12 ~ 2025.12
         description: | # this will include new lines to allow paragraphs
             <br>
-            <font size="4.5"><b>Unity를 활용하여 시스템 및 콘텐츠 다수 개발.</b></font>
+            <font size="4.5"><b>Unity 콘텐츠 및 시스템 다수 개발.</b></font>
             - 실감형 콘텐츠, 포토부스, 포토카드 등 다양한 콘텐츠를 전담하여 아키텍처 설계 및 구현
+            - 프린터, 카드리더기 등 콘텐츠 개발에 필요한 하드웨어 연동 및 기능 모듈화
             - OpenCV 및 Shader를 활용하여 엣지블렌딩 시스템 개발
             - Localization 패키지를 확장하여 CSV 기반 로컬라이제이션 시스템 개발
-            - 콘텐츠 개발에 필요한 하드웨어 SDK를 Unity와 연동하여 기능 모듈화
             <br>
             <br>
             <font size="4.5"><b>프로젝트 유지보수 및 개선.</b></font>
