--- a/_config.yml
+++ b/_config.yml
@@ -108,14 +108,14 @@ content:
             <br>
             <font size="4"><b>Unity 콘텐츠 개발에 필요한 핵심 기술 개발.</b></font>
             - 카메라 연결 및 실시간 영상 스트림을 획득하기 위한 카메라 제어 시스템 개발
-            - 프로젝션 환경에서의 실시간 인터랙션 시스템 개발
-            - OpenCV를 활용하여 이미지 내 스케치된 그림을 검출하는 알고리즘 개발
+            - 프로젝션 환경에서 콘텐츠와의 실시간 인터랙션을 위한 터치 검출 시스템 개발
+            - OpenCV를 활용하여 이미지 내 그려진 그림을 검출·추출하는 알고리즘 개발
             <br>
             <br>
             <font size="4"><b>Unity 네이티브 플러그인 개발.</b></font>
-            - 카메라 제어를 위해 카메라 SDK를 활용한 C++ 플러그인 개발
-            - 이미지 내 그림을 스키닝된 2D 캐릭터로 생성하기 위한 C++ 플러그인 개발
-            - 기존 C#으로 구현된 기능을 C++로 포팅하여 성능 최적화
+            - 카메라 제어를 위해 카메라 SDK를 활용한 C++ 플러그인 개발      
+            - 이미지를 스키닝된 2D 캐릭터로 생성하기 위한 데이터를 생성하는 C++ 플러그인 개발
+            - 기존 C#으로 구현된 기능을 C++로 포팅하고 플러그인으로 연동하여 성능 최적화
 
   - title: Other Experience
     layout: list
