--- a/_config.yml
+++ b/_config.yml
@@ -51,8 +51,7 @@ about_content: | # this will include new lines to allow paragraphs
   확장성과 유지보수성을 고려한 아키텍처 설계를 중요하게 생각하며, 변화에 유연하게 대응할 수 있는 구조를 만들기 위해 지속적으로 고민하고 노력하고 있습니다.
   
   
-  
-  
+  개인 블로그에 학습 및 개발 경험을 정리하여 공유하고 있습니다. 머리로 알고있던 것을 글로 정리하는 과정에서 개념을 재정립하고 새로운 인사이트를 얻고 있습니다.
 
 
   
