--- a/_config.yml
+++ b/_config.yml
@@ -46,13 +46,14 @@ about_title: About Me
 about_profile_image: images/profile.jpg
 about_content: | # this will include new lines to allow paragraphs
   <font size="5"><b>반갑습니다, 저는 최은호입니다.</b></font>
+
   
   6년차 Unity 클라이언트 개발자로서 실감형 콘텐츠를 중심으로 개발해왔으며, 콘텐츠 개발을 지원하기 위한 다양한 시스템 개발 경험을 보유하고 있습니다.
   확장성과 유지보수성을 고려한 아키텍처 설계를 중요하게 생각하며, 변화에 유연하게 대응할 수 있는 구조를 만들기 위해 지속적으로 고민하고 노력하고 있습니다.
 
 
   새로운 경험을 하는 것을 좋아합니다. 경험을 통해 새로운 지식을 얻을 수 있고, 문제 해결 능력이 성장한다고 생각합니다.
-  또한, 개인 블로그에 학습 및 개발 경험을 정리하여 공유하고 있습니다. 머리로 알고있던 것을 글로 정리하는 과정에서 개념을 재정립하고 새로운 인사이트를 얻고 있습니다.
+  또한, 개인 블로그에 새롭게 얻은 경험을 정리하여 공유하고 있습니다. 머리로 알고있던 것을 글로 정리하는 과정에서 개념을 재정립하고 새로운 인사이트를 얻고 있습니다.
 
 
 content:
