--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ email: eunho5751@naver.com
 website: https://eunho5751.tistory.com
 
 # Dark Mode (true/false/never)
-darkmode: false
+darkmode: true
 
 # Social links
 #twitter_username: facespics
