--- a/_config.yml
+++ b/_config.yml
@@ -138,6 +138,84 @@ content:
         
         2016.03 ~ 2019.02 청강문화산업대학교 게임전공 - 프로그래밍
 
+career:
+  - title: 경력 기술서
+    layout: list
+    content:
+      - layout: top-middle
+        title: 셀빅
+        sub_title: 프로그램팀, 대리
+        caption: 2022.12 ~ 2025.12
+        description: | # this will include new lines to allow paragraphs
+            <br>
+            <font size="4"><b>던파 20주년 페스티벌 판타 드로우잇｜2025.10 ~ 2025.11</b></font>
+            *유저가 스케치 및 색칠한 그림을 2D 캐릭터로 생성하고 손으로 터치하여 인터랙션 할 수 있는 실감형 콘텐츠 개발*
+            - FSM 기반 캐릭터 상태 관리 및 행동 로직 구현
+            - 캐릭터 및 기믹 오브젝트의 터치·충돌 이벤트 구현
+            - 키오스크에서 생성된 캐릭터 데이터 송·수신을 위한 TCP/IP 소켓 통신 구현
+            - 32:9 해상도 지원을 위해 자체 개발한 엣지블렌딩 시스템 적용
+            <br>
+            <br>
+            <font size="4"><b>현대백화점 흰디 포토카드｜2024.09 ~ 2024.12</b></font>
+            *AI 프롬프트를 조합하여 현대 백화점의 캐릭터 '흰디'를 생성형 AI로 생성하고 프린터를 이용해 포토카드로 출력하는 프로그램 개발*
+            - Unity 환경에서 포토카드 출력을 위한 프린터 연동
+            - 프롬프트 선택·캐릭터 생성·출력 등 전반적인 UI 기능 구현
+            <br>
+            <br>
+            <font size="4"><b>꿈이담키즈헬스케어센터 관리자 툴｜2024.06 ~ 2024.08</b></font>
+            *꿈이담키즈헬스케어센터에 납품된 콘텐츠들의 상태를 실시간으로 모니터링하고 사용자들의 정보를 관리할 수 있는 프로그램 개발*
+            - 콘텐츠 상태 모니터링을 위한 웹소켓(Socket.IO) 기반 실시간 통신 구현
+            - 사용자 데이터 관리를 위한 HTTP 기반 CRUD 구현
+            - 모니터링 대시보드, 사용자 데이터 관리 등 전반적인 UI 기능 구현
+            <br>
+            <br>
+            <font size="4"><b>포토하니｜2023.06 ~ 2023.12</b></font>
+            *사진 촬영부터 보정·출력까지 가능한 포토부스 프로그램 개발*
+            - Unity 환경에서 포토부스 개발에 필요한 하드웨어 연동 (카메라, 촬영 리모컨, 프린터, 카드단말기)
+            - 얼굴 인식 기반 3D 소품 AR 합성 기능 구현
+            - 결제·촬영·출력 등 전반적인 UI 기능 구현
+            <br>
+            <br>
+            <font size="4"><b>소프트웨어 엣지블렌딩 시스템｜2023.01 ~ 2023.03</b></font>
+            *멀티 프로젝션 환경에서 여러 투사 영역을 하나의 화면처럼 자연스럽게 연결하는 소프트웨어 기반 엣지블렌딩 시스템 개발*
+            - OpenCV와 Shader를 활용하여 엣지블렌딩 핵심 기능 구현
+            - UGUI 확장을 통해 엣지블렌딩 환경에서의 UI 인터랙션 구현
+            - UI 디자인, 레이아웃, 기능 개발
+            - 현장 설치 지원을 위한 사용 매뉴얼 작성
+            <br>
+            <br>
+            <font size="4"><b>유엔젤 키즐｜2022.12 ~ 2025.07</b></font>
+            *프로젝션 환경에서 손을 이용한 터치, 공 던지기와 같은 인터랙션을 통해 유아들에게 놀이 환경을 제공하는 실감형 콘텐츠 5종 개발*
+            - 전반적인 콘텐츠 플레이 로직 및 연출 구현
+            - 프레임워크의 유지보수성을 높이기 위해 의존성 분리 등 구조 개선
+            - 팀 내 공유를 위한 프레임워크 사용 매뉴얼 작성
+            
+      - layout: top-middle
+        title: 셀빅
+        sub_title: R&D팀, 연구원
+        caption: 2019.10 ~ 2022.04
+        description: | # this will include new lines to allow paragraphs
+            <br>
+            <font size="4"><b>2D 스케치 캐릭터 생성 라이브러리｜2020.06 ~ 2020.08</b></font>
+            *이미지 내 스케치된 그림을 검출하여 애니메이션이 가능한 2D 캐릭터로 변환하는 라이브러리 개발*
+            - OpenCV를 활용하여 스케치 그림 검출 알고리즘 구현
+            - 기존 Unity C# 스크립트로 작성된 캐릭터 생성 기능들을 성능 개선을 위해 C++로 포팅
+            - Windows / Android / iOS 플랫폼별 라이브러리 빌드 환경 구축
+            <br>
+            <br>
+            <font size="4"><b>영상 처리 기반 인터랙션 시스템｜2020.03 ~ 2020.05</b></font>
+            *실감형 콘텐츠에 사용자 인터랙션을 적용하기 위해 영상 처리 기반 인터랙션 시스템 개발*
+            - 카메라 연동부터 인터랙션 검출 결과를 전달하는 전반적인 파이프라인 설계 및 구현 
+            - 영상 처리 기능 모듈화를 통해 다양한 인터랙션 알고리즘을 유연하게 구현할 수 있는 구조 설계 및 구현
+            - OpenCV를 활용하여 프로젝션 환경에서의 터치·움직임 검출 알고리즘 구현
+            <br>
+            <br>
+            <font size="4"><b>카메라 제어 시스템｜2020.01 ~ 2020.02</b></font>
+            *실감형 콘텐츠 개발에 사용되는 다양한 타입의 카메라를 추가 구현 없이 연동하여 실시간 영상 스트림을 획득하는 시스템 개발*
+            - Unity 환경에서 카메라 제어를 위한 C++ 기반 네이티브 플러그인 개발
+            - 카메라 제어 로직을 추상화하여 신규 카메라를 유연하게 확장 가능한 구조 설계
+            - 카메라 연결 상태 모니터링 및 자동 재연결 기능 구현
+
 # Footer
 footer_show_references: false
 # references_title: References on request (Override references text)
