--- a/_config.yml
+++ b/_config.yml
@@ -152,11 +152,11 @@ career:
         caption: 2022.12 ~ 2025.12
         description: | # this will include new lines to allow paragraphs
             <br>
-            <font size="4"><b>던파 20주년 페스티벌 판타 드로우잇｜2025.10 ~ 2025.11</b></font>
-            *유저가 스케치 및 색칠한 그림을 2D 캐릭터로 생성하고 손으로 터치하여 인터랙션 할 수 있는 실감형 콘텐츠 개발*
+            <font size="4"><b>판타 드로우잇｜2025.10 ~ 2025.11</b></font>
+            "던파 20주년 페스티벌에 납품된 콘텐츠로, 플레이어가 그린 그림을 캐릭터화하여 맵에 배치하고 프로젝션 환경에서 손으로 터치하여 실시간 인터랙션할 수 있는 실감형 콘텐츠 개발"
             - FSM 기반 캐릭터 상태 관리 및 행동 로직 구현
             - 캐릭터 및 기믹 오브젝트의 터치·충돌 이벤트 구현
-            - 키오스크에서 생성된 캐릭터 데이터 송·수신을 위한 TCP/IP 소켓 통신 구현
+            - 키오스크에서 생성된 캐릭터 데이터 송·수신을 위한 소켓 통신 구현
             - 32:9 해상도 지원을 위해 자체 개발한 엣지블렌딩 시스템 적용
             <br>
             <br>
@@ -200,14 +200,14 @@ career:
         caption: 2019.10 ~ 2022.04
         description: | # this will include new lines to allow paragraphs
             <br>
-            <font size="4"><b>2D 스케치 캐릭터 생성 라이브러리｜2020.06 ~ 2020.08</b></font>
-            *이미지 내 스케치된 그림을 검출하여 애니메이션이 가능한 2D 캐릭터로 변환하는 라이브러리 개발*
-            - OpenCV를 활용하여 스케치 그림 검출 알고리즘 구현
-            - 기존 Unity C# 스크립트로 작성된 캐릭터 생성 기능들을 성능 개선을 위해 C++로 포팅
-            - Windows / Android / iOS 플랫폼별 라이브러리 빌드 환경 구축
+            <font size="4"><b>이미지 캐릭터화 플러그인｜2020.06 ~ 2020.08</b></font>｜<mark>C#</mark>, <mark>C++</mark>, <mark>Unity</mark>, <mark>OpenCV</mark>
+            *Unity 내 2D 캐릭터 생성을 위해 이미지 내 그려진 캐릭터를 검출하여 메시, 리깅, 스키닝 데이터를 생성하는 C++ 플러그인 개발*
+            - OpenCV를 활용하여 캐릭터 검출 알고리즘 구현
+            - 캐릭터 데이터 생성을 위해 기존 C#에서 작성된 영상처리 알고리즘을 C++로 포팅하여 성능 개선
+            - Windows / Android / iOS 플랫폼별 플러그인 빌드 환경 구축
             <br>
             <br>
-            <font size="4"><b>영상 처리 기반 인터랙션 시스템｜2020.03 ~ 2020.05</b></font>
+            <font size="4"><b>인터랙션 검출 시스템｜2020.03 ~ 2020.05</b></font>
             *실감형 콘텐츠에 사용자 인터랙션을 적용하기 위해 영상 처리 기반 인터랙션 시스템 개발*
             - 카메라 연동부터 인터랙션 검출 결과를 전달하는 전반적인 파이프라인 설계 및 구현 
             - 영상 처리 기능 모듈화를 통해 다양한 인터랙션 알고리즘을 유연하게 구현할 수 있는 구조 설계 및 구현
