--- a/_config.yml
+++ b/_config.yml
@@ -121,14 +121,14 @@ content:
             <br>
             <font size="4"><b>Unity 콘텐츠 개발에 필요한 핵심 기술 개발.</b></font>
             - 카메라 연결 및 실시간 영상 스트림을 획득하기 위한 카메라 제어 시스템 개발
-            - 프로젝션 환경에서 콘텐츠와의 실시간 인터랙션을 위한 터치 검출 시스템 개발
-            - OpenCV를 활용하여 이미지 내 그려진 그림을 검출·추출하는 알고리즘 개발
+            - 실감형 콘텐츠에서 플레이어의 인터랙션을 실시간으로 검출하기 위해 영상처리 기반 인터랙션 검출 시스템 개발
+            - OpenCV를 활용하여 이미지 내 그려진 캐릭터를 검출하는 알고리즘 개발
             <br>
             <br>
             <font size="4"><b>Unity 네이티브 플러그인 개발.</b></font>
-            - 카메라 제어를 위해 카메라 SDK를 활용한 C++ 플러그인 개발      
-            - 그림 이미지를 스키닝된 2D 캐릭터 생성에 필요한 데이터로 변환하는 C++ 플러그인 개발
-            - 기존 C#으로 구현된 기능을 C++로 포팅하고 플러그인으로 연동하여 성능 최적화
+            - 카메라 제어를 위해 카메라 SDK를 활용한 C++ 플러그인 개발
+            - 이미지 내 그려진 캐릭터를 검출하여 2D 캐릭터 생성을 위한 메시, 리깅, 스키닝 데이터를 생성하는 C++ 플러그인 개발
+            - 그림을 기반으로 2D 캐릭터 생성을 위한 메시, 리깅, 스키닝 데이터를 생성하는 C++ 플러그인 개발
 
   - title: Other Experience
     layout: list
@@ -200,27 +200,32 @@ career:
         caption: 2019.10 ~ 2022.04
         description: | # this will include new lines to allow paragraphs
             <br>
-            <font size="4"><b>이미지 캐릭터화 플러그인｜2020.06 ~ 2020.08</b></font>
-            *Unity 내 2D 캐릭터 생성을 위해 이미지 내 그려진 캐릭터를 검출하여 메시, 리깅, 스키닝 데이터를 생성하는 C++ 플러그인 개발*
-            - OpenCV를 활용하여 캐릭터 검출 알고리즘 구현
-            - 캐릭터 데이터 생성을 위해 기존 C#에서 작성된 영상처리 알고리즘을 C++로 포팅하여 성능 개선
+            <font size="4"><b>2D 캐릭터 생성 플러그인｜2020.06 ~ 2020.08</b></font>
+            *이미지 내 그려진 캐릭터를 검출하여 메시, 리깅, 스키닝 데이터를 생성하는 C++ 플러그인 개발*
+            - OpenCV를 활용하여 캐릭터 그림 검출 알고리즘 구현
+            - 기존 C# 기반 캐릭터 생성 관련 영상처리 알고리즘을 C++로 포팅하여 성능 개선
             - Windows / Android / iOS 플랫폼별 플러그인 빌드 환경 구축
 
             <mark>C#</mark> <mark>C++</mark> <mark>Unity</mark> <mark>OpenCV</mark>
             <br>
             <br>
             <font size="4"><b>인터랙션 검출 시스템｜2020.03 ~ 2020.05</b></font>
-            *실감형 콘텐츠에 사용자 인터랙션을 적용하기 위해 영상 처리 기반 인터랙션 시스템 개발*
-            - 카메라 연동부터 인터랙션 검출 결과를 전달하는 전반적인 파이프라인 설계 및 구현 
-            - 영상 처리 기능 모듈화를 통해 다양한 인터랙션 알고리즘을 유연하게 구현할 수 있는 구조 설계 및 구현
-            - OpenCV를 활용하여 프로젝션 환경에서의 터치·움직임 검출 알고리즘 구현
+            *실감형 콘텐츠에서 플레이어의 인터랙션을 실시간으로 검출하기 위해 영상처리 기반 인터랙션 검출 시스템 개발*
+            - 카메라 연동부터 인터랙션 검출 결과를 전달하는 전반적인 파이프라인 설계 및 구현
+            - 멀티스레딩을 통해 인터랙션 검출과 결과의 처리를 분리하여 성능 병목 최소화
+            - OpenCV를 활용하여 터치·움직임 검출 알고리즘 구현
+
+            <mark>C#</mark> <mark>Unity</mark> <mark>OpenCV</mark>
             <br>
             <br>
             <font size="4"><b>카메라 제어 시스템｜2020.01 ~ 2020.02</b></font>
             *실감형 콘텐츠 개발에 사용되는 다양한 타입의 카메라를 추가 구현 없이 연동하여 실시간 영상 스트림을 획득하는 시스템 개발*
+            **
             - Unity 환경에서 카메라 제어를 위한 C++ 기반 네이티브 플러그인 개발
             - 카메라 제어 로직을 추상화하여 신규 카메라를 유연하게 확장 가능한 구조 설계
             - 카메라 연결 상태 모니터링 및 자동 재연결 기능 구현
+
+            <mark>C#</mark> <mark>C++</mark> <mark>Unity</mark> <mark>OpenCV</mark>
 
 # Footer
 footer_show_references: false
