--- a/_config.yml
+++ b/_config.yml
@@ -200,8 +200,8 @@ career:
         caption: 2019.10 ~ 2022.04
         description: | # this will include new lines to allow paragraphs
             <br>
-            <font size="4"><b>2D 캐릭터 생성 플러그인｜2020.06 ~ 2020.08</b></font>
-            *이미지 내 그려진 캐릭터를 검출하여 메시, 리깅, 스키닝 데이터를 생성하는 C++ 플러그인 개발*
+            <font size="4"><b>LiveCharacter Plugin｜2020.06 ~ 2020.08</b></font>
+            *영상처리를 통해 이미지 내 그려진 캐릭터를 검출하여 메시, 리깅, 스키닝 데이터를 생성하는 C++ 플러그인 개발*
             - OpenCV를 활용하여 캐릭터 그림 검출 알고리즘 구현
             - 기존 C# 기반 캐릭터 생성 관련 영상처리 알고리즘을 C++로 포팅하여 성능 개선
             - Windows / Android / iOS 플랫폼별 플러그인 빌드 환경 구축
@@ -209,7 +209,7 @@ career:
             <mark>C#</mark> <mark>C++</mark> <mark>Unity</mark> <mark>OpenCV</mark>
             <br>
             <br>
-            <font size="4"><b>인터랙션 검출 시스템｜2020.03 ~ 2020.05</b></font>
+            <font size="4"><b>Detection System｜2020.03 ~ 2020.05</b></font>
             *실감형 콘텐츠에서 플레이어의 인터랙션을 실시간으로 검출하기 위해 영상처리 기반 인터랙션 검출 시스템 개발*
             - 카메라 연동부터 인터랙션 검출 결과를 전달하는 전반적인 파이프라인 설계 및 구현
             - 멀티스레딩을 통해 인터랙션 검출과 결과의 처리를 분리하여 성능 병목 최소화
@@ -218,7 +218,7 @@ career:
             <mark>C#</mark> <mark>Unity</mark> <mark>OpenCV</mark>
             <br>
             <br>
-            <font size="4"><b>카메라 제어 시스템｜2020.01 ~ 2020.02</b></font>
+            <font size="4"><b>VideoDevice System｜2020.01 ~ 2020.02</b></font>
             *실감형 콘텐츠 개발에 사용되는 다양한 타입의 카메라를 추가 구현 없이 연동하여 실시간 영상 스트림을 획득하는 시스템 개발*
             **
             - Unity 환경에서 카메라 제어를 위한 C++ 기반 네이티브 플러그인 개발
