--- a/_config.yml
+++ b/_config.yml
@@ -90,12 +90,11 @@ content:
   - title: Work Experience # Title for the section
     layout: list # Type of content section (list/text)
     content:
-      - layout: left
+      - layout: top-middle
         title: 셀빅
         sub_title: 프로그램팀, 대리
         caption: 2022.12 ~ 2025.12
         description: | # this will include new lines to allow paragraphs
-            <br>
             <font size="4.5"><b>Unity 콘텐츠 및 시스템 다수 개발.</b></font>
             - 실감형 콘텐츠, 포토부스, 포토카드 등 다양한 콘텐츠를 전담하여 아키텍처 설계 및 구현
             - 프린터, 카드리더기 등 콘텐츠 개발에 필요한 하드웨어 연동 및 기능 모듈화
@@ -115,7 +114,7 @@ content:
             <br>
             <br>
             
-      - layout: top-left
+      - layout: top-middle
         title: 셀빅
         sub_title: R&D팀, 연구원
         caption: 2019.10 ~ 2022.04
