--- a/_config.yml
+++ b/_config.yml
@@ -122,14 +122,14 @@ content:
         description: | # this will include new lines to allow paragraphs
             <br>
             <font size="4"><b>Unity 콘텐츠 개발에 필요한 핵심 기술 개발.</b></font>
-            - 다양한 종류의 카메라를 선택적으로 연결하고 실시간 영상 스트림을 획득하는 시스템 개발
-            - 실감형 콘텐츠에서 플레이어의 인터랙션을 실시간으로 검출하기 위해 영상처리 기반 인터랙션 검출 시스템 개발
-            - OpenCV를 활용하여 이미지 내 캐릭터 그림을 검출하는 알고리즘 개발 (그림 → 2D 캐릭터 생성 플러그인 개발에 사용)
+            - 웹캠, 키넥트 등 다양한 종류의 카메라 연결 및 실시간 영상 스트림 획득을 위한 시스템 개발
+            - 실감형 콘텐츠에서 플레이어의 인터랙션을 검출하기 위해 영상처리 기반 실시간 인터랙션 검출 시스템 개발
+            - OpenCV를 활용한 이미지 내 캐릭터 그림 검출 알고리즘 개발
             <br>
             <br>
             <font size="4"><b>Unity 네이티브 플러그인 개발.</b></font>
-            - 카메라 제어를 위해 SDK를 활용한 C++ 플러그인 개발
-            - 캐릭터 그림을 기반으로 2D 캐릭터 생성에 필요한 메시, 리깅, 스키닝 데이터를 생성하는 C++ 플러그인 개발
+            - 카메라 제어를 위해 카메라 SDK를 활용한 C++ 플러그인 개발
+            - 이미지 내 캐릭터 그림을 검출하여 2D 캐릭터 생성에 필요한 메시·리깅·스키닝 데이터를 생성하는 C++ 플러그인 개발
 
   - title: Other Experience
     layout: list
@@ -204,7 +204,7 @@ career:
         description: | # this will include new lines to allow paragraphs
             <br>
             <font size="4"><b>LiveCharacter Plugin｜2020.06 ~ 2020.08</b></font>
-            *이미지 내 캐릭터 그림을 검출하여 2D 캐릭터 생성에 필요한 메시, 리깅, 스키닝 데이터를 생성하는 C++ 플러그인 개발*
+            *이미지 내 캐릭터 그림을 검출하여 2D 캐릭터 생성에 필요한 메시·리깅·스키닝 데이터를 생성하는 C++ 플러그인 개발*
             - OpenCV를 활용하여 캐릭터 그림 검출 알고리즘 개발
             - 기존 C# 기반 캐릭터 생성 관련 영상처리 알고리즘을 C++로 포팅하여 성능 개선
             - Windows / Android / iOS 플랫폼별 플러그인 빌드 환경 구축
@@ -213,7 +213,7 @@ career:
             <br>
             <br>
             <font size="4"><b>Detection System｜2020.03 ~ 2020.05</b></font>
-            *실감형 콘텐츠에서 플레이어의 인터랙션을 실시간으로 검출하기 위해 영상처리 기반 인터랙션 검출 시스템 개발*
+            *실감형 콘텐츠에서 플레이어의 인터랙션을 검출하기 위해 영상처리 기반 실시간 인터랙션 검출 시스템 개발*
             - 카메라 연동부터 인터랙션 검출 결과를 전달하는 전반적인 파이프라인 설계 및 구현
             - 멀티스레딩을 통해 인터랙션 검출과 결과의 처리를 분리하여 성능 병목 최소화
             - OpenCV를 활용하여 터치·움직임 검출 알고리즘 구현
@@ -222,14 +222,12 @@ career:
             <br>
             <br>
             <font size="4"><b>VideoDevice System｜2020.01 ~ 2020.02</b></font>
-            *다양한 종류의 카메라를 선택적으로 연결하고 실시간 영상 스트림을 획득하는 시스템 개발*
-            - Unity 환경에서 카메라 제어를 위해 SDK를 활용한 C++ 플러그인 개발
+            *웹캠, 키넥트 등 다양한 종류의 카메라 연결 및 실시간 영상 스트림 획득을 위한 시스템 개발*
+            - Unity 환경에서 카메라 제어를 위해 카메라 SDK를 활용한 C++ 플러그인 개발
             - 카메라 제어 로직을 추상화하여 인터페이스를 통해 신규 카메라를 유연하게 확장 가능한 구조 설계
             - 카메라 연결 상태 모니터링 및 자동 재연결 기능 구현
 
             <mark>C#</mark> <mark>C++</mark> <mark>Unity</mark> <mark>OpenCV</mark>
-            <br>
-            <br>
 
 # Footer
 footer_show_references: false
