--- a/_config.yml
+++ b/_config.yml
@@ -105,8 +105,8 @@ content:
             <br>
             <font size="4.5"><b>프로젝트 유지보수 및 개선.</b></font>
             - 콘텐츠 개발에 사용되는 프레임워크 리팩토링을 통한 코드 구조 개선
-            - UniTask를 활용해 코루틴 기반 비동기 로직을 async/await 기반으로 작성하여 코드 가독성 개선
-            - Addressables을 통해 리소스를 관리하여 메모리 사용 및 빌드 사이즈 최적화
+            - UniTask를 통해 Coroutine을 async/await 기반으로 작성하여 비동기 코드 구조 개선
+            - Addressables을 활용한 리소스 관리를 통해 메모리 사용 및 빌드 사이즈 최적화
             <br>
             <br>
             <font size="4.5"><b>팀 내 개발 프로세스 및 개발 문화 개선.</b></font>
@@ -165,8 +165,8 @@ career:
             <br>
             <font size="4"><b>[현대백화점 더현대 서울] 흰디 포토카드｜2024.09 ~ 2024.12</b></font>
             *AI 프롬프트를 조합하여 현대 백화점의 캐릭터 '흰디'를 생성형 AI로 생성하고 포토카드 프린터를 통해 출력하는 포토카드 소프트웨어 개발*
-            - 프롬프트 선택·캐릭터 생성·출력 등 전반적인 기능 및 UI 구현
-            - ScriptableObject 기반 프롬프트 관리를 통해 데이터와 로직을 분리하고 유지보수성 개선
+            - 프롬프트 선택·캐릭터 생성·출력 등 UI 기능 구현 (UGUI)
+            - ScriptableObject 기반 프롬프트 관리를 통해 데이터와 로직을 분리하여 유지보수성 개선
             - 포토카드 프린터 연동 및 기능 모듈화
 
             <mark>C#</mark> <mark>Unity</mark>
@@ -174,17 +174,19 @@ career:
             <br>
             <font size="4"><b>[꿈이담키즈헬스케어센터] 관리자 툴｜2024.06 ~ 2024.08</b></font>
             *꿈이담키즈헬스케어센터에 납품된 콘텐츠들의 상태를 실시간으로 모니터링하고 고객들의 정보를 관리하는 소프트웨어 개발*
-            - 모니터링 대시보드, 고객 데이터 관리 등 전반적인 기능 및 UI 구현
+            - 모니터링 대시보드, 고객 관리 등 UI 기능 구현 (UGUI)
             - 콘텐츠 상태 모니터링을 위한 웹소켓(Socket.IO) 기반 실시간 통신 구현
             - 고객 데이터 관리를 위한 HTTP 기반 CRUD 구현
+
+            <mark>C#</mark> <mark>Unity</mark>
             <br>
             <br>
             <font size="4"><b>포토하니｜2023.06 ~ 2023.12</b></font>
             *카메라를 통해 인물 사진을 촬영하고 보정하여 포토 프린터를 통해 출력하는 포토부스 소프트웨어 개발*
-            - 결제·촬영·출력 등 전반적인 기능 및 UI 구현
-            - 3D 소품 실시간 AR 합성 기능 구현
-            - 서드파티 결제 솔루션 연동 (KSNET)
-            - 촬영 및 출력에 필요한 하드웨어 연동 및 기능 모듈화 (카메라, 촬영 리모컨, 프린터)
+            - 결제·촬영·출력 등 UI 기능 구현 (UGUI)
+            - 카드 결제를 위한 서드파티 결제 솔루션 연동 (KSNET)
+            - 촬영 시 3D 소품을 실시간으로 얼굴에 합성하는 AR 기능 구현
+            - 촬영 및 출력을 위한 하드웨어 연동 및 기능 모듈화 (카메라, 촬영 리모컨, 프린터)
 
             <mark>C#</mark> <mark>Unity</mark>
             <br>
@@ -193,17 +195,18 @@ career:
             *멀티 프로젝션 환경에서 여러 투사 영역을 하나의 화면처럼 자연스럽게 연결하는 소프트웨어 기반 엣지블렌딩 시스템 개발*
             - OpenCV와 Shader를 활용하여 엣지블렌딩 핵심 기능 구현 (Warping, Blending)
             - UGUI 확장을 통해 엣지블렌딩(고해상도) 환경에서의 UI 인터랙션 기능 구현
-            - UI 디자인, 레이아웃, 기능 개발
-            - 현장 설치 지원을 위한 사용 매뉴얼 작성
+            - UI 디자인, 레이아웃, 기능 개발 (UGUI)
 
             <mark>C#</mark> <mark>Unity</mark> <mark>OpenCV</mark>
             <br>
             <br>
             <font size="4"><b>[유엔젤] 키즐｜2022.12 ~ 2025.07</b></font>
-            *프로젝션 환경에서 손을 이용한 터치, 공 던지기와 같은 인터랙션을 통해 유아들에게 놀이 환경을 제공하는 실감형 콘텐츠 5종 개발*
-            *프로젝션 환경에서 손 또는 볼풀공을 이용한 터치 인터랙션을 통해 *
-            - 프레임워크의 유지보수성을 높이기 위해 의존성 분리 등 구조 개선
-            - 팀 내 공유를 위한 프레임워크 사용 매뉴얼 작성
+            *프로젝션 환경에서 손 또는 볼풀공을 이용한 터치 인터랙션을 통해 놀이 환경을 제공하는 실감형 콘텐츠 5종 개발*
+            - ObjectPool 패턴을 통해 반복 생성되는 오브젝트를 풀링하여 성능 최적화
+            - Addressables을 활용해 프로젝트 내 여러 콘텐츠들의 리소스를 관리하여 
+            - Addressables을 활용한 리소스 관리를 통해 메모리 사용 및 빌드 사이즈 최적화
+            - UniTask를 통해 Coroutine을 async/await 기반으로 작성하여 비동기 코드 구조 개선
+            - 콘텐츠 개발에 사용되는 프레임워크 리팩토링을 통한 코드 구조 개선
 
             <mark>C#</mark> <mark>Unity</mark>
             <br>
