--- a/_config.yml
+++ b/_config.yml
@@ -98,9 +98,9 @@ content:
             <br>
             <font size="4.5"><b>Unity 콘텐츠 및 시스템 다수 개발.</b></font>
             - 실감형 콘텐츠, 포토부스, 포토카드 등 다양한 콘텐츠를 전담하여 아키텍처 설계 및 구현
-            - 프린터, 카드리더기 등 콘텐츠 개발에 필요한 하드웨어 연동 및 기능 모듈화
             - 고해상도 콘텐츠 개발을 위해 OpenCV와 Shader를 활용한 엣지블렌딩 시스템 개발
             - Localization 패키지를 확장하여 CSV 기반 로컬라이제이션 시스템 개발
+            - 프린터, 카드리더기 등 콘텐츠 개발에 필요한 하드웨어 연동 및 기능 모듈화
             <br>
             <br>
             <font size="4.5"><b>프로젝트 유지보수 및 개선.</b></font>
@@ -155,8 +155,8 @@ career:
             <br>
             <font size="4"><b>[던파 20주년 페스티벌] 판타 드로우잇｜2025.10 ~ 2025.11</b></font>
             *그림을 캐릭터화하여 맵에 배치하고 프로젝션 환경에서 손으로 터치하여 실시간 인터랙션할 수 있는 실감형 콘텐츠 개발*
-            - FSM 기반 캐릭터 상태 관리 및 행동 로직 구현
-            - 캐릭터 및 기믹 오브젝트의 터치·충돌 이벤트 구현
+            - FSM 기반 캐릭터·기믹 오브젝트 상태 관리 및 로직 구현
+            - Object Pool 패턴을 적용해 터치 이펙트 등 오브젝트를 재사용하여 프레임 드랍 최소화
             - 키오스크에서 생성된 캐릭터 데이터 송·수신을 위한 소켓 통신 구현
             - 32:9 해상도 지원을 위해 자체 개발한 엣지블렌딩 시스템 적용
 
@@ -185,7 +185,7 @@ career:
             *카메라를 통해 인물 사진을 촬영하고 보정하여 포토 프린터를 통해 출력하는 포토부스 소프트웨어 개발*
             - 결제·촬영·출력 등 UI 기능 구현 (UGUI)
             - 카드 결제를 위한 서드파티 결제 솔루션 연동 (KSNET)
-            - 촬영 시 3D 소품을 실시간으로 얼굴에 합성하는 AR 기능 구현
+            - 3D 소품을 실시간으로 얼굴에 합성하는 AR 기능 구현
             - 촬영 및 출력을 위한 하드웨어 연동 및 기능 모듈화 (카메라, 촬영 리모컨, 프린터)
 
             <mark>C#</mark> <mark>Unity</mark>
@@ -196,17 +196,6 @@ career:
             - OpenCV와 Shader를 활용하여 엣지블렌딩 핵심 기능 구현 (Warping, Blending)
             - UGUI 확장을 통해 엣지블렌딩(고해상도) 환경에서의 UI 인터랙션 기능 구현
             - UI 디자인, 레이아웃, 기능 개발 (UGUI)
-
-            <mark>C#</mark> <mark>Unity</mark> <mark>OpenCV</mark>
-            <br>
-            <br>
-            <font size="4"><b>[유엔젤] 키즐｜2022.12 ~ 2025.07</b></font>
-            *프로젝션 환경에서 손 또는 볼풀공을 이용한 터치 인터랙션을 통해 놀이 환경을 제공하는 실감형 콘텐츠 5종 개발*
-            - ObjectPool 패턴을 통해 반복 생성되는 오브젝트를 풀링하여 성능 최적화
-            - Addressables을 활용해 프로젝트 내 여러 콘텐츠들의 리소스를 관리하여 
-            - Addressables을 활용한 리소스 관리를 통해 메모리 사용 및 빌드 사이즈 최적화
-            - UniTask를 통해 Coroutine을 async/await 기반으로 작성하여 비동기 코드 구조 개선
-            - 콘텐츠 개발에 사용되는 프레임워크 리팩토링을 통한 코드 구조 개선
 
             <mark>C#</mark> <mark>Unity</mark>
             <br>
