--- a/_config.yml
+++ b/_config.yml
@@ -163,7 +163,7 @@ career:
             <mark>C#</mark> <mark>Unity</mark>
             <br>
             <br>
-            <font size="4"><b>[현대백화점 더현대 서울] 흰디 포토카드｜2024.09 ~ 2024.12</b></font>
+            <font size="4"><b>[더현대 서울] 흰디 포토카드｜2024.09 ~ 2024.12</b></font>
             *AI 프롬프트를 조합하여 현대 백화점의 캐릭터 '흰디'를 생성형 AI로 생성하고 포토카드 프린터를 통해 출력하는 포토카드 소프트웨어 개발*
             - 프롬프트 선택·캐릭터 생성·출력 등 UI 기능 구현 (UGUI)
             - ScriptableObject 기반 프롬프트 관리를 통해 데이터와 로직을 분리하여 유지보수성 개선
@@ -197,7 +197,7 @@ career:
             - UGUI 확장을 통해 엣지블렌딩(고해상도) 환경에서의 UI 인터랙션 기능 구현
             - UI 디자인, 레이아웃, 기능 개발 (UGUI)
 
-            <mark>C#</mark> <mark>Unity</mark>
+            <mark>C#</mark> <mark>Unity</mark> <mark>OpenCV</mark>
             <br>
             <br>
             
