--- a/_config.yml
+++ b/_config.yml
@@ -192,8 +192,9 @@ career:
             <br>
             <br>
             <font size="4"><b>엣지블렌딩 시스템｜2023.01 ~ 2023.03</b></font>
-            *멀티 프로젝션 환경에서 여러 투사 영역을 하나의 화면처럼 자연스럽게 연결하는 소프트웨어 기반 엣지블렌딩 시스템 개발*
-            - OpenCV와 Shader를 활용하여 엣지블렌딩 핵심 기능 구현 (Warping, Blending)
+            *멀티 프로젝션 환경에서 각 프로젝션 영역을 자연스럽게 연결하여 하나의 큰 프로젝션 영역으로 만드는 소프트웨어 기반 엣지블렌딩 시스템 개발*
+            - OpenCV를 활용한 기하 보정 구현 (Image Warping)
+            - Shader를 활용한 밝기 보정 구현 (Image Blending)
             - UGUI 확장을 통해 엣지블렌딩(고해상도) 환경에서의 UI 인터랙션 기능 구현
             - UI 디자인, 레이아웃, 기능 개발 (UGUI)
 
